--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,5 +37,5 @@ jobs:
     - name: Test with pytest
       run: |
         cd unittests
-        coverage run --source=.. --rcfile=./.coveragerc -m pytest
+        pytest
 
