--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,6 +15,13 @@ jobs:
     strategy:
       matrix:
         python-version: [3.9.12]
+    services:
+      mqtt:
+        image: eclipse-mosquitto:2.0
+        ports:
+          - "1883:1883"
+        volumes:
+          - ./mosquitto/config:/mosquitto/config
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
