start docker-compose stack & build/push docker image to dockerhub

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,6 +32,12 @@ jobs:
       run: |
         pip install -r requirements/local.txt
         pip install -e .
+    
+    - name: Docker-compose Build
+      run: docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d --build
+    - name: Docker-compose list containers
+      run: docker-compose ps
+    
     - name: Run black --check .
       run: black --check . --exclude _actions
     - name: Test with pytest
