--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,13 +15,6 @@ jobs:
     strategy:
       matrix:
         python-version: [3.9.12]
-    services:
-      mqtt:
-        image: eclipse-mosquitto:2.0
-        ports:
-          - "1883:1883"
-        volumes:
-          - ${{ github.workspace }}/mosquitto/config:/mosquitto/config
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -41,10 +34,12 @@ jobs:
         pip install -e .
     
     - name: Docker-compose Build
-      run: docker-compose up -d --build
+      run: | 
+        cd docker/test_tracker_dcs_web
+        docker-compose up -d 
+        cd -
     - name: Docker-compose list containers
       run: docker-compose ps
-    
     - name: Run black --check .
       run: black --check . --exclude _actions
     - name: Test with pytest
