--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,13 +33,11 @@ jobs:
         pip install -r requirements/local.txt
         pip install -e .
     
-    - name: Docker-compose Build
+    - name: Docker-compose start mqtt
       run: | 
         cd docker/test_tracker_dcs_web
         docker-compose up -d 
         cd -
-    - name: Docker-compose list containers
-      run: docker-compose ps
     - name: Run black --check .
       run: black --check . --exclude _actions
     - name: Test with pytest
