--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,11 +10,12 @@ jobs:
           name: Checkout 
           uses: actions/checkout@v2
         -
-          name: Login to Docker Hub
+          name: Login to ghcr
           uses: docker/login-action@v1
           with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+            registry: ghcr.io
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
         -
           name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v1
