--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,6 +2,12 @@ name: Docker-Image-Build-Publish
 on:
   push:
     branches: [main]
+
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,7 +19,7 @@ jobs:
           name: Login to ghcr
           uses: docker/login-action@v1
           with:
-            registry: ghcr.io
+            registry: ${{ env.REGISTRY }}
             username: ${{ github.actor }}
             password: ${{ secrets.GITHUB_TOKEN }}
         -
@@ -26,5 +32,5 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/tracker_dcs_web:main
+            tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
             
