--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,8 +1,10 @@
 name: Docker-Image-Build-Publish
 on:
   push:
-    branches: [main]
-
+    branches:
+      - 'main'
+    tags:
+      - 'v*'
 
 env:
   REGISTRY: ghcr.io
@@ -15,6 +17,16 @@ jobs:
         -
           name: Checkout 
           uses: actions/checkout@v2
+        -
+          name: Docker metadata
+          id: meta
+          uses: docker/metadata-action@v3
+          with:
+            images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+            tags: |
+              type=ref,event=branch
+              type=semver,pattern={{version}}
+              type=semver,pattern={{major}}.{{minor}}
         -
           name: Login to ghcr
           uses: docker/login-action@v1
@@ -32,5 +44,5 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
-            tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
-            
+            tags: ${{ steps.meta.outputs.tags }}
+            labels: ${{ steps.meta.outputs.labels }}
