--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -46,7 +46,7 @@ jobs:
         pytest --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
-      with: --cov=./ --cov-report=xml
+      with:
         directory: ./coverage/reports/
         env_vars: OS,PYTHON
         fail_ci_if_error: true
