--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,6 +43,7 @@ jobs:
     - name: Test with pytest
       run: |
         cd unittests
+        pip install pytest-cov
         pytest --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
