--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -49,10 +49,10 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
-        directory: ./unittests/coverage/reports/
+        directory: ./unittests
         env_vars: OS,PYTHON
         fail_ci_if_error: true
-        files: ./coverage1.xml,./coverage2.xml
+        files: ./coverage.xml
         flags: unittests
         name: codecov-umbrella
         # path_to_write_report: ./coverage/codecov_report.txt
