--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         cd unittests
         pip install pytest-cov
-        pytest --cov=./ --cov-report=xml
+        pytest --cov=../ --cov-report=xml
         ls
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
