--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -54,3 +54,5 @@ jobs:
         name: codecov-umbrella
         # path_to_write_report: ./coverage/codecov_report.txt
         verbose: true
+        files: | 
+          ! **/dummy_labview.py
