try and exclude dummy labview script from codecov

--- a/unittests/.coveragerc
+++ b/unittests/.coveragerc
@@ -1,5 +1,3 @@
 [run]
-omit = *test*.py, *setup.py, *__init__.py*, *_version.py
+omit = *test*.py, *setup.py, *__init__.py*, *_version.py, *dummy_labview.py
 
-[report]
-omit = *scripts/*, *alembic/versions*, */utils/alembic.py, */sql/init_db*, *test*.py, *setup.py, *__init__.py*,
