--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,8 +42,7 @@ jobs:
       run: |
         cd unittests
         pip install pytest-cov
-        pytest --cov=../ --cov-report=xml
-        ls
+        pytest --cov=../tracker_dcs_web --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
@@ -54,5 +53,3 @@ jobs:
         name: codecov-umbrella
         # path_to_write_report: ./coverage/codecov_report.txt
         verbose: true
-        files: | 
-          ! **/dummy_labview.py
