--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "pandas>=2.0.3, <2.1.0",
     "python-multipart>=0.0.6, <0.1",
     "pyyaml>=6.0.1, <6.1",
-    # "requests",
+    "requests>=2.31.0, <2.32",
     "uvicorn==0.22.*",
 ]
 
@@ -37,7 +37,6 @@ local = [
     "pytest-asyncio==0.21.*",
     "pytest-mock==3.10.*",
     "python-dotenv==1.0.*",
-    "requests>=2.31.0, <2.32"
 ]
 
 
